Examples/Engine/engine.h



//
//		SetNameOfInstance                           (http://rdf.bg/gkdoc/CP64/SetNameOfInstance.html)
//				int64_t				owlInstance							IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the instance, if no error it returns 0.
//	In case instance does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfInstance(
									int64_t				owlInstance,
									const char			* name
								);


//
//		SetNameOfInstanceW                          (http://rdf.bg/gkdoc/CP64/SetNameOfInstanceW.html)
//				int64_t				owlInstance							IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the instance, if no error it returns 0.
//	In case instance does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfInstanceW(
									int64_t				owlInstance,
									const wchar_t		* name
								);


//
//		SetNameOfInstanceEx                         (http://rdf.bg/gkdoc/CP64/SetNameOfInstanceEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				const char			* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the instance, if no error it returns 0.
//	In case instance does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfInstanceEx(
									int64_t				model,
									int64_t				owlInstance,
									const char			* name
								);


//
//		SetNameOfInstanceWEx                        (http://rdf.bg/gkdoc/CP64/SetNameOfInstanceWEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				const wchar_t		* name								IN
//
//				int64_t				returns								OUT
//
//	Sets/updates the name of the instance, if no error it returns 0.
//	In case instance does not exist it returns 1, when name cannot be updated 2.
//
int64_t		DECL STDC	SetNameOfInstanceWEx(
									int64_t				model,
									int64_t				owlInstance,
									const wchar_t		* name
								);


//
//		GetNameOfInstance                           (http://rdf.bg/gkdoc/CP64/GetNameOfInstance.html)
//				int64_t				owlInstance							IN
//				char				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the instance, if the instance does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfInstance(
									int64_t				owlInstance,
									char				** name
								);


//
//		GetNameOfInstanceW                          (http://rdf.bg/gkdoc/CP64/GetNameOfInstanceW.html)
//				int64_t				owlInstance							IN
//				wchar_t				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the instance, if the instance does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfInstanceW(
									int64_t				owlInstance,
									wchar_t				** name
								);


//
//		GetNameOfInstanceEx                         (http://rdf.bg/gkdoc/CP64/GetNameOfInstanceEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				char				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the instance, if the instance does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfInstanceEx(
									int64_t				model,
									int64_t				owlInstance,
									char				** name
								);


//
//		GetNameOfInstanceWEx                        (http://rdf.bg/gkdoc/CP64/GetNameOfInstanceWEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				wchar_t				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the instance, if the instance does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfInstanceWEx(
									int64_t				model,
									int64_t				owlInstance,
									wchar_t				** name
								);


//
//		SetDatatypeProperty                         (http://rdf.bg/gkdoc/CP64/SetDatatypeProperty.html)
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				const void			* values							IN
//				int64_t				card								IN
//
//				int64_t				returns								OUT
//
//	This function sets the value(s) of a certain datatypeTypeProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of undefined (void) items is a list of booleans, chars, integers
//	or doubles, this list has a length as givin in the values card. The actual used type
//	is given by the definition of the dataTypeProperty.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
//	Note: the client application needs to make sure the cardinality of
//		  the property is within the boundaries.
//
int64_t		DECL STDC	SetDatatypeProperty(
									int64_t				owlInstance,
									int64_t				rdfProperty,
									const void			* values,
									int64_t				card
								);


//
//		SetDatatypePropertyEx                       (http://rdf.bg/gkdoc/CP64/SetDatatypePropertyEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				const void			* values							IN
//				int64_t				card								IN
//
//				int64_t				returns								OUT
//
//	This function sets the value(s) of a certain datatypeTypeProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of undefined (void) items is a list of booleans, chars, integers
//	or doubles, this list has a length as givin in the values card. The actual used type
//	is given by the definition of the dataTypeProperty.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
//	This call has the same behavior as SetDatatypeProperty, however needs to be
//	used in case properties are exchanged as a successive series of integers.
//
//	Note: the client application needs to make sure the cardinality of
//		  the property is within the boundaries.
//
int64_t		DECL STDC	SetDatatypePropertyEx(
									int64_t				model,
									int64_t				owlInstance,
									int64_t				rdfProperty,
									const void			* values,
									int64_t				card
								);


//
//		GetDatatypeProperty                         (http://rdf.bg/gkdoc/CP64/GetDatatypeProperty.html)
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				void				** values							IN / OUT
//				int64_t				* card								IN / OUT
//
//				int64_t				returns								OUT
//
//	This function gets the value(s) of a certain datatypeTypeProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of undefined (void) items is a list of booleans, chars, integers
//	or doubles, this list has a length as givin in the value card. The actual used type
//	is given by the definition of the dataTypeProperty.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
int64_t		DECL STDC	GetDatatypeProperty(
									int64_t				owlInstance,
									int64_t				rdfProperty,
									void				** values,
									int64_t				* card
								);


//
//		GetDatatypePropertyEx                       (http://rdf.bg/gkdoc/CP64/GetDatatypePropertyEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				void				** values							IN / OUT
//				int64_t				* card								IN / OUT
//
//				int64_t				returns								OUT
//
//	This function gets the value(s) of a certain datatypeTypeProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of undefined (void) items is a list of booleans, chars, integers
//	or doubles, this list has a length as givin in the value card. The actual used type
//	is given by the definition of the dataTypeProperty.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
//	This call has the same behavior as GetDatatypeProperty, however needs to be
//	used in case properties are exchanged as a successive series of integers.
//
int64_t		DECL STDC	GetDatatypePropertyEx(
									int64_t				model,
									int64_t				owlInstance,
									int64_t				rdfProperty,
									void				** values,
									int64_t				* card
								);


//
//		SetObjectProperty                           (http://rdf.bg/gkdoc/CP64/SetObjectProperty.html)
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				const int64_t		* values							IN
//				int64_t				card								IN
//
//				int64_t				returns								OUT
//
//	This function sets the value(s) of a certain objectTypeProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of integers is a list of handles to instances, this list
//	has a length as givin in the values card.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
//	Note: the client application needs to make sure the cardinality of
//		  the property is within the boundaries.
//
int64_t		DECL STDC	SetObjectProperty(
									int64_t				owlInstance,
									int64_t				rdfProperty,
									const int64_t		* values,
									int64_t				card
								);