IfcEngine.cs


		/// <summary>
		///		SetNameOfInstance                           (http://rdf.bg/gkdoc/CS64/SetNameOfInstance.html)
		///
		///	Sets/updates the name of the instance, if no error it returns 0.
		///	In case instance does not exist it returns 1, when name cannot be updated 2.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfInstance")]
		public static extern Int64 SetNameOfInstance(Int64 owlInstance, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfInstance")]
		public static extern Int64 SetNameOfInstance(Int64 owlInstance, byte[] name);

		/// <summary>
		///		SetNameOfInstanceW                          (http://rdf.bg/gkdoc/CS64/SetNameOfInstanceW.html)
		///
		///	Sets/updates the name of the instance, if no error it returns 0.
		///	In case instance does not exist it returns 1, when name cannot be updated 2.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfInstanceW")]
		public static extern Int64 SetNameOfInstanceW(Int64 owlInstance, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfInstanceW")]
		public static extern Int64 SetNameOfInstanceW(Int64 owlInstance, byte[] name);

		/// <summary>
		///		SetNameOfInstanceEx                         (http://rdf.bg/gkdoc/CS64/SetNameOfInstanceEx.html)
		///
		///	Sets/updates the name of the instance, if no error it returns 0.
		///	In case instance does not exist it returns 1, when name cannot be updated 2.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfInstanceEx")]
		public static extern Int64 SetNameOfInstanceEx(Int64 model, Int64 owlInstance, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfInstanceEx")]
		public static extern Int64 SetNameOfInstanceEx(Int64 model, Int64 owlInstance, byte[] name);

		/// <summary>
		///		SetNameOfInstanceWEx                        (http://rdf.bg/gkdoc/CS64/SetNameOfInstanceWEx.html)
		///
		///	Sets/updates the name of the instance, if no error it returns 0.
		///	In case instance does not exist it returns 1, when name cannot be updated 2.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfInstanceWEx")]
		public static extern Int64 SetNameOfInstanceWEx(Int64 model, Int64 owlInstance, string name);

		[DllImport(IFCEngineDLL, EntryPoint = "SetNameOfInstanceWEx")]
		public static extern Int64 SetNameOfInstanceWEx(Int64 model, Int64 owlInstance, byte[] name);

		/// <summary>
		///		GetNameOfInstance                           (http://rdf.bg/gkdoc/CS64/GetNameOfInstance.html)
		///
		///	Returns the name of the instance, if the instance does not exist it returns nullptr.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetNameOfInstance")]
		public static extern void GetNameOfInstance(Int64 owlInstance, out IntPtr name);

		/// <summary>
		///		GetNameOfInstanceW                          (http://rdf.bg/gkdoc/CS64/GetNameOfInstanceW.html)
		///
		///	Returns the name of the instance, if the instance does not exist it returns nullptr.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetNameOfInstanceW")]
		public static extern void GetNameOfInstanceW(Int64 owlInstance, out IntPtr name);

		/// <summary>
		///		GetNameOfInstanceEx                         (http://rdf.bg/gkdoc/CS64/GetNameOfInstanceEx.html)
		///
		///	Returns the name of the instance, if the instance does not exist it returns nullptr.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetNameOfInstanceEx")]
		public static extern void GetNameOfInstanceEx(Int64 model, Int64 owlInstance, out IntPtr name);

		/// <summary>
		///		GetNameOfInstanceWEx                        (http://rdf.bg/gkdoc/CS64/GetNameOfInstanceWEx.html)
		///
		///	Returns the name of the instance, if the instance does not exist it returns nullptr.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetNameOfInstanceWEx")]
		public static extern void GetNameOfInstanceWEx(Int64 model, Int64 owlInstance, out IntPtr name);

		/// <summary>
		///		SetDatatypeProperty                         (http://rdf.bg/gkdoc/CS64/SetDatatypeProperty.html)
		///
		///	This function sets the value(s) of a certain datatypeTypeProperty
		///	in the context of an instance.
		///	The value of card gives the actual card of the values list.
		///	The list values of undefined (void) items is a list of booleans, chars, integers
		///	or doubles, this list has a length as givin in the values card. The actual used type
		///	is given by the definition of the dataTypeProperty.
		///	The return value always should be 0, if not something is wrong in the way this property is called.
		///
		///	Note: the client application needs to make sure the cardinality of
		///		  the property is within the boundaries.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypeProperty")]
		public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, ref byte values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypeProperty")]
		public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, byte[] values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypeProperty")]
		public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, ref Int64 values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypeProperty")]
		public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, Int64[] values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypeProperty")]
		public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, ref double values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypeProperty")]
		public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, double[] values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypeProperty")]
		public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, ref string values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypeProperty")]
		public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, string[] values, Int64 card);

		/// <summary>
		///		SetDatatypePropertyEx                       (http://rdf.bg/gkdoc/CS64/SetDatatypePropertyEx.html)
		///
		///	This function sets the value(s) of a certain datatypeTypeProperty
		///	in the context of an instance.
		///	The value of card gives the actual card of the values list.
		///	The list values of undefined (void) items is a list of booleans, chars, integers
		///	or doubles, this list has a length as givin in the values card. The actual used type
		///	is given by the definition of the dataTypeProperty.
		///	The return value always should be 0, if not something is wrong in the way this property is called.
		///
		///	This call has the same behavior as SetDatatypeProperty, however needs to be
		///	used in case properties are exchanged as a successive series of integers.
		///
		///	Note: the client application needs to make sure the cardinality of
		///		  the property is within the boundaries.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypePropertyEx")]
		public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, ref byte values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypePropertyEx")]
		public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, byte[] values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypePropertyEx")]
		public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, ref Int64 values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypePropertyEx")]
		public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, Int64[] values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypePropertyEx")]
		public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, ref double values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypePropertyEx")]
		public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, double[] values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypePropertyEx")]
		public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, ref string values, Int64 card);

		[DllImport(IFCEngineDLL, EntryPoint = "SetDatatypePropertyEx")]
		public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, string[] values, Int64 card);

		/// <summary>
		///		GetDatatypeProperty                         (http://rdf.bg/gkdoc/CS64/GetDatatypeProperty.html)
		///
		///	This function gets the value(s) of a certain datatypeTypeProperty
		///	in the context of an instance.
		///	The value of card gives the actual card of the values list.
		///	The list values of undefined (void) items is a list of booleans, chars, integers
		///	or doubles, this list has a length as givin in the value card. The actual used type
		///	is given by the definition of the dataTypeProperty.
		///	The return value always should be 0, if not something is wrong in the way this property is called.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetDatatypeProperty")]
		public static extern Int64 GetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, out IntPtr values, out Int64 card);

		/// <summary>
		///		GetDatatypePropertyEx                       (http://rdf.bg/gkdoc/CS64/GetDatatypePropertyEx.html)
		///
		///	This function gets the value(s) of a certain datatypeTypeProperty
		///	in the context of an instance.
		///	The value of card gives the actual card of the values list.
		///	The list values of undefined (void) items is a list of booleans, chars, integers
		///	or doubles, this list has a length as givin in the value card. The actual used type
		///	is given by the definition of the dataTypeProperty.
		///	The return value always should be 0, if not something is wrong in the way this property is called.
		///
		///	This call has the same behavior as GetDatatypeProperty, however needs to be
		///	used in case properties are exchanged as a successive series of integers.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetDatatypePropertyEx")]
		public static extern Int64 GetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, out IntPtr values, out Int64 card);

		/// <summary>
		///		SetObjectProperty                           (http://rdf.bg/gkdoc/CS64/SetObjectProperty.html)
		///
		///	This function sets the value(s) of a certain objectTypeProperty
		///	in the context of an instance.
		///	The value of card gives the actual card of the values list.
		///	The list values of integers is a list of handles to instances, this list
		///	has a length as givin in the values card.
		///	The return value always should be 0, if not something is wrong in the way this property is called.
		///
		///	Note: the client application needs to make sure the cardinality of
		///		  the property is within the boundaries.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetObjectProperty")]
		public static extern Int64 SetObjectProperty(Int64 owlInstance, Int64 rdfProperty, ref Int64 values, Int64 card);
